--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_marginTop="5dp"
+    android:background="@color/Indigo"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/foodName"
@@ -19,8 +21,8 @@
         android:layout_height="match_parent"
         android:layout_weight="4"
         android:gravity="left|center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -32,9 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="right|center"
             android:padding="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <ImageView
             android:id="@+id/buyIcon"
