--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -24,16 +24,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:gravity="center"
-            android:textColor="#00AA00"
+            android:gravity="right"
+            android:textColor="#007700"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <ImageView
             android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_delete" />
+            android:layout_width="60dp"
+            android:layout_height="25dp"
+            app:srcCompat="@drawable/logout" />
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
