--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -2,46 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
-        android:layout_margin="8dp"/>
-
-    <TextView
-        android:id="@+id/foodName"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        android:gravity="left|center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        />
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="62dp"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/food"
+        android:layout_weight="0.08" />
+
+        <TextView
+            android:id="@+id/foodName"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:gravity="left|center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+
         <TextView
             android:id="@+id/foodPrice"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="right"
-            android:padding="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:padding="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#11AA11" />
 
         <ImageView
             android:id="@+id/buyIcon"
-            android:layout_width="60dp"
+            android:layout_width="63dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/shoppingcart" />
 
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 </LinearLayout>
