--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="White">#FFFFFF</color>
     <color name="Teal">#009688</color>
-    <color name="Indigo">#AEEA00</color>
+    <color name="Indigo">#d7ffb3</color>
 </resources>
