--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#55CCFF"
+        android:background="@color/Teal"
         android:padding="5dp">
 
         <TextView
@@ -17,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textColor="@color/White"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/credit"
@@ -25,8 +26,8 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="right"
-            android:textColor="#007700"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textColor="@color/White"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <ImageView
             android:id="@+id/logout"
