--- a/app/src/main/res/layout/user_frag.xml
+++ b/app/src/main/res/layout/user_frag.xml
@@ -3,9 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView
-            android:text="user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" android:id="@+id/textView3"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"/>
 </RelativeLayout>
