--- a/app/src/main/res/layout/activity_database.xml
+++ b/app/src/main/res/layout/activity_database.xml
@@ -46,10 +46,6 @@
 
     </LinearLayout>
 
-
-
-
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,6 +61,77 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnView"
             android:text="View Data" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:text="Zadaj meno Produktu:"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewItem"
+            />
+        <EditText
+            android:textAlignment="center"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:id="@+id/editTextItem"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:text="Zadaj cenu Produktu:"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewItem2"
+            />
+        <EditText
+            android:textAlignment="center"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:id="@+id/editTextItem2" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:text="Vyber typ (1-jedlo 2-voda 3-snack):"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewItem3"
+            />
+        <Spinner
+            android:id="@+id/typItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:entries="@array/ProductTypes"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAddItem"
+            android:text="Add Item" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnViewItem"
+            android:text="View Products" />
     </LinearLayout>
 
 
