Item Admin Create

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="White">#FFFFFF</color>
     <color name="Teal">#009688</color>
     <color name="Indigo">#d7ffb3</color>
+    <color name="yellow">#ffee58</color>
+
 </resources>
