--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -42,8 +42,9 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
+            android:layout_gravity="bottom|start"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/cart"/>
+            android:src="@drawable/cart"
+            android:backgroundTint="@color/yellow"/>
 
 </android.support.design.widget.CoordinatorLayout>
