--- a/app/src/main/res/layout/item_frag.xml
+++ b/app/src/main/res/layout/item_frag.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView2"/>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scrollbars="vertical"
+    >
+
+    </android.support.v7.widget.RecyclerView>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:fabSize="auto" app:srcCompat="@android:drawable/ic_input_add" android:id="@+id/fb"
+            android:layout_weight="1" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp" android:layout_marginBottom="80dp"
+            android:backgroundTint="@color/White"/>
 </RelativeLayout>
