remove shop icon in admin interface

--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="@color/Indigo">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="?android:attr/listPreferredItemHeight"
+              android:background="@color/Indigo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,8 +44,8 @@
             android:id="@+id/buyIcon"
             android:layout_width="63dp"
             android:layout_height="match_parent"
-            android:background="@color/Indigo"
-            app:srcCompat="@drawable/shoppingcart" />
+            android:background="@color/Indigo"/>
+            <!--app:srcCompat="@drawable/shoppingcart" />-->
 
     </LinearLayout>
     <View
