--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -3,53 +3,54 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight"
-              android:background="@color/Indigo">
+              android:layout_height="?android:attr/listPreferredItemHeight">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="62dp"
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.08"
-            android:background="@color/Indigo"
-            app:srcCompat="@drawable/food" />
-
-        <TextView
-            android:id="@+id/foodName"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="left|center"
-            android:background="@color/Indigo"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:layout_margin="3dp"
+            app:cardCornerRadius="3dp"
+            app:contentPadding="4dp"
+            android:orientation="horizontal">
 
 
-        <TextView
-            android:id="@+id/foodPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="right|center"
-            android:padding="5dp"
-            android:background="@color/Indigo"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="62dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.08"
+                    app:srcCompat="@drawable/food"/>
 
-        <ImageView
-            android:id="@+id/buyIcon"
-            android:layout_width="63dp"
-            android:layout_height="match_parent"
-            android:background="@color/Indigo"/>
+            <TextView
+                    android:id="@+id/foodName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:gravity="left|center"
+                    android:paddingLeft="10dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+
+
+            <TextView
+                    android:id="@+id/foodPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="right|center"
+                    android:padding="5dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+
+            <ImageView
+                    android:id="@+id/buyIcon"
+                    android:layout_width="63dp"
+                    android:layout_height="match_parent"/>
             <!--app:srcCompat="@drawable/shoppingcart" />-->
+        </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
 </LinearLayout>
